--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fontsource/roboto": "^4.5.8",
+    "@hookform/resolvers": "^3.1.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.0",
     "@next/font": "13.1.6",
@@ -26,8 +27,11 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-unity-webgl": "^9.4.0",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "validations-br": "^1.3.0",
+    "yup": "^1.1.1"
   }
 }
