--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-unity-webgl": "^9.4.0",
+    "swiper": "8.2.4",
+    "swiper-react": "1.0.0",
     "typescript": "4.9.5",
     "validations-br": "^1.3.0",
     "yup": "^1.1.1"
