--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "npx prettier --write ."
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.18",
@@ -36,5 +37,8 @@
     "typescript": "4.9.5",
     "validations-br": "^1.3.0",
     "yup": "^1.1.1"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.8"
   }
 }
